# os

./: .gitignore  CMakeLists.txt  README.md  build.cmake  create_image.sh  launch.sh  linker.ld
src/arch/i386/: grub.cfg  profile.cmake
src/arch/i386/boot/: __boot.s  boot.asm  crti.s  crtn.s  gdt.s
src/arch/i386/constants/: types.h
src/arch/i386/main/: ports.h  tty.c
src/kernel/: kernel.c  tty.h
src/kernel/constants/: keys.h  types.h
src/kernel/globals/: globals.c  globals.h
src/kernel/system/: allocator.c  allocator.h
src/kernel/system/heap/: kheap.c  kpool.c  kpool.h
src/libc/: Makefile
src/libc/include/: stdlib.h  string.h
src/libc/include/sys/: cdefs.h
src/libc/src/: string.c
unused/: OSKernel.h  asm_guide.s
unused/boot/: x86bootSectorDisk.asm  x86bootSectorPrint.asm  x86bootloader.asm
unused/boot/int/: x86_idt.c  x86_idt.h  x86_iex.asm  x86_iex.h  x86_irq.asm  x86_irq.h  x86_isr.c  x86_isr.h  x86_pic8259.c  x86_pic8259.h
unused/command/: OSCmd.c  OSCmd.h  OSCmd_CPUID.c  OSCmd_Help.c  OSCmd_Info.c
unused/platform/: registers.h
unused/platform/x86/input/: x86KeyboardHandler.c  x86KeyboardHandler.h  x86MouseHandler.c  x86MouseHandler.h
unused/platform/x86/main/: x86_entry.asm  x86_gdt.c  x86_gdt.h  x86_gdt.s  x86_kmain.c  x86_kmain.h
unused/platform/x86/registers/: x86_registers.c  x86_registers.h
unused/platform/x86/terminal/: x86Terminal.c  x86Terminal.h
unused/platform/x86/video/: x86_vga_controller.c  x86_vga_controller.h
unused/utils/: kdebug.h  keyboard.c  keyboard.h  string.h
